支持MongoDB记录访问日志

--- a/default.config.ini
+++ b/default.config.ini
@@ -8,7 +8,7 @@ db_port=3306
 db_user=root
 db_pass=123456
 db_name=myblog
-
+db_debug=true
 #http
 http_listen_port=9001
 
@@ -16,8 +16,15 @@ http_listen_port=9001
 jwt_secret=123456
 jwt_expr_time=8600
 log_dir=./log.log
+log_level=info
 
 #谷歌验证码秘钥
-ga_secret=XO2XX6NG3XXXEU4d
+ga_secret=VO2Wc6NG3XZZEU4d
 
+#es配置
+es_host=http://127.0.0.1:9200
+
+#mongo_host配置
+mongo_host=mongodb://localhost:27017
+mongo_conn_timeout=10
 
