--- a/default.config.ini
+++ b/default.config.ini
@@ -19,7 +19,7 @@ log_dir=./log.log
 log_level=info
 
 #谷歌验证码秘钥
-ga_secret=VO2Wc6NG3XZZEU4d
+ga_secret=xxxxxxxxxxxx
 
 #es配置
 es_host=http://127.0.0.1:9200
