--- a/build.sh.example
+++ b/build.sh.example
@@ -1,3 +1,3 @@
 #!/bin/bash
-docker build -t registry.cn-shenzhen.aliyuncs.com/weylau/myblog-api:latest -f Dockerfile .
+docker build --no-cache -t registry.cn-shenzhen.aliyuncs.com/weylau/myblog-api:latest -f Dockerfile .
 docker push registry.cn-shenzhen.aliyuncs.com/weylau/myblog-api:latest
