--- a/default.config.ini
+++ b/default.config.ini
@@ -1,5 +1,6 @@
 #环境 dev,prd
 env=dev
+debug=true
 
 #数据库
 db_driver=mysql
@@ -27,4 +28,10 @@ es_host=http://127.0.0.1:9200
 #mongo_host配置
 mongo_host=mongodb://localhost:27017
 mongo_conn_timeout=10
+
+#redis
+redis_host=172.16.57.110:6379
+redis_pwd=
+redis_db=0
+redis_cache_version=20200101
 
